[package]
name = "xxshim"
version = "0.1.0"
edition = "2024"
authors = ["Jack McPherson <jack@jmcph4.dev>"]
license = "MIT"
description = "A minimalist hooking library for Reth"
repository = "https://github.com/jmcph4/xxshim"
readme = "README.md"
keywords = ["blockchain", "ethereum", "cryptocurrency"]
categories = ["cryptography::cryptocurrencies", "development-tools"]

[dependencies]
eyre = "0.6.12"
reth-exex = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
futures = "0.3.31"
clap = "4.5.32"
alloy-primitives = "0.8.24"

